<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostPresentation">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="88dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/newpreTextview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/newPresentation"
                android:textSize="24dp" />

            <EditText
                android:id="@+id/titleTextView"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:minHeight="10dp"
                android:text="@string/new_title"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/usernameTextView"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:minHeight="10dp"
                android:text="@string/new_username"
                android:textSize="12sp" />

            <ImageButton
                android:id="@+id/videoButton"
                android:layout_width="177dp"
                android:layout_height="127dp"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/video"
                app:srcCompat="@android:drawable/ic_menu_gallery" />

            <EditText
                android:id="@+id/scriptTextView"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:autofillHints=""
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:minHeight="50dp"
                android:text="@string/new_script"
                android:textSize="14sp" />

            <ImageButton
                android:id="@+id/scriptButton"
                android:layout_width="177dp"
                android:layout_height="127dp"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/video"
                app:srcCompat="@android:drawable/ic_menu_gallery" />

            <Button
                android:id="@+id/sendbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:clickable="true"
                android:onClick="startLoad"
                android:text="@string/submit" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>