<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Feedback">

    <TextView
        android:id="@+id/feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Feedbacks"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/overall_return_button"
        android:layout_width="368dp"
        android:layout_height="44dp"
        android:layout_marginBottom="16dp"
        android:text="Back to Overall Assessment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="409dp"
        android:layout_height="55dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedback">

        <Button
            android:id="@+id/speech_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/speech"
            android:textSize="11sp" />

        <Button
            android:id="@+id/visual_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/visual"
            android:textSize="11sp" />

        <Button
            android:id="@+id/suggestion_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/suggestion"
            android:textSize="11sp" />


    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:name="cn.edu.sjtu.yyqdashen.presentation.OverallFragment"
        android:layout_width="320dp"
        android:layout_height="460dp"
        android:layout_marginTop="32dp"
        android:foregroundGravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>